# printing

./: .gitignore  .pre-commit-config.yaml  README.md  env.default  pyproject.toml
.github/: dependabot.yml
src/: printing.py
src/printing/: cli.py  printing.py
