[tool.poetry]
name = "printing"
version = "0.1.0"
description = "printing g's"
authors = ["Kathy <krispleaf.co@gmail.com>"]
readme = "README.md"
packages = [{include = "printing", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
yfinance = "^0.2.40"
numpy = "^2.0.0"
pyspark = "^3.5.1"
setuptools = "^70.3.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"

[tool.poetry.scripts]
printing = 'printing.cli:printing_cli'

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = 'black'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
